fix header overflow

--- a/src/sass/theme/directives/app-header.scss
+++ b/src/sass/theme/directives/app-header.scss
@@ -3,6 +3,11 @@
   border-bottom: 1px solid $muted;
   height: $appHeaderHeight;
 
+  .app-header-right {
+    overflow: hidden;
+    white-space: nowrap;
+  }
+
   h1 {
     margin: 0;
     font-size: 1.5vw;
